--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+Copyright (c) 2010, Giles Smith
+All rights reserved.
+Full Details http://www.iknowfoobar.co.uk/licence/
+
+********************************************************
+
 A PHP class to allow the sending of emails from your PHP Script
 
 Assumes that you have set up PHP correctly for email sending.
