--- a/README
+++ b/README
@@ -4,10 +4,5 @@ Full Details http://www.iknowfoobar.co.uk/licence/
 
 ********************************************************
 
-A PHP class to allow the sending of emails from your PHP Script
-
-Assumes that you have set up PHP correctly for email sending.
-
-Handles HTML or plain text emails, CC, BCC
-
+FULL DOCUMENTATION:
 http://www.iknowfoobar.co.uk/php/php-email-class
